--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-
+<script defer src="https://cloud.umami.is/script.js" data-website-id="5e96907e-5f87-42b5-868f-10e2db48b550"></script>
 </head>
 
 <body id="top">
