--- a/martin.html
+++ b/martin.html
@@ -101,7 +101,7 @@
 "> <img src="yes.png" style="width:80%; border-radius: 90%;       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7); margin-left: 20%; margin-top: -20%;">
                         </h1>
 
-    <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;">Read some of our <a href="testimonials.html.html">testimonials</a><a href="about.html"></a> or <a href="contact.html">ring the bell.</a>
+    <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;">Read some of our <a href="testimonials.html">testimonials</a><a href="about.html"></a> or <a href="contact.html">ring the bell.</a>
                         </h1>
         </main> <!-- end s-content -->
 
