--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 <div class="row intro-content wide">
 
                     <div class="column">
-                        <div class="text-pretitle with-line" style="color: grey; opacity: 0.4;">
-                       Bonjour,
+                        <div class="text-pretitle" style="color: darkgrey; opacity:0.1;">
+                       
                         </div>
 
                         <h1 class="text-huge-title">
-                           We're <i><span style="color:#0055A4">C</span>r<span style="color:white">o<span style="color:#EF4135">a</span></i><span style="color:grey">ssant</span>*. </h1>
-                        <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;"><a href="about.html">🇫🇷 - France's concierge →</a>
+                           <span style="color:darkgrey"> Bonjour, <br>We're <i><span style="color:#0055A4">C</span><span style="color:white">ro<span style="color:#EF4135">a</span></i><span style="color:darkgrey">ssant</span>... </h1>
+                        <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;"><a href="about.html">— France's concierge →</a>
                         </h1>
                    
                     </div>
