--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title><i>Croa</i>ssant.</title>
+    <title>Croassant.</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -65,6 +65,7 @@
                     <ul>
                   <li><a href="index.html"><i>Croa</i>ssant.</a></li>
                         <li><a href="about.html" >About</a></li>
+                           <li><a href="about.html" >Services</a></li>
                         <li><a href="work.html">Works</a></li>
                                                 <li><a href="testimonials.html" >Testimonials</a></li>
 
@@ -88,34 +89,16 @@
                 <div class="row intro-content wide">
 
                     <div class="column">
-                        <div class="text-pretitle with-line">
-                        Our story?
+                        <div class="text-pretitle">
+                        Our story? 
                         </div>
 
                         <h1 class="text-huge-title">
-                            #Yours.<br>
+                            Yours. <h4> Act. 1 [The butler steps in.]</h4>
                         </h1>
+<p style="color: darkgrey;" animate> Imagine arriving at your grand hotel in Paris. You drop your bags, take in the view of the Eiffel Tower, and call the concierge for a taxi, dinner reservation, or perhaps a special request. But what if you need more? That's when we take the leap with serving your life with #MOREFRANCE.</p>
+                             <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;"><a href="services.html">Our services.</a>
 
-                           <h1 class="text-huge-title" >
-                           <p style="font-size: 3rem; color: grey;"> Imagine arriving at your grand hotel in Paris. You drop your bags, take in the view of the Eiffel Tower, and call the concierge for a taxi, dinner reservation, or perhaps a special request. But what if you need more? That's when we take the leap with serving your life with #MOREFRANCE.
-                        </h1>
-                        </h1><br><br>
-     <div class="text-pretitle with-line">
-                        Our name?
-                        </div>
-
-                        <h1 class="text-huge-title"><sup>*</sup><span style="color:#0055A4">C</span>r<span style="color:white">o<span style="color:#EF4135">a</span><sup>2</sup></span><i>ss-ant</i><sup>1</sup>
-                            <br>
-                        </h1>
-
-                           <h1 class="text-huge-title" >
-                           <p style="font-size: 3rem;color: grey;">*A playful nod to <i>les rosbifs </i> calling us frogs—so we croak in English while enjoying our favorite pastry: croissant.<br><br><sup>1</sup> In French, verbs ending in <i>-ant</i> show an ongoing action, just like <i>-ing</i> in English.
-<br><br>
-<sup>2</sup>
-And while our fellow French might correct us, saying, 'It’s coassant for a frog croaking in French, not croassant,' that’s exactly the point—we mix English and French like no one else, just like we do with our services, always ready to help you if French gives you a frog in your throat. </h1>
- <p class="text-huge-title " style="margin-left: 8; font-size: 30px; color:lightgrey">→ We'll make France's <i>savoir-faire</i> <a href="work.html"> #work </a> for you.
-                        </h1>
-                        </h1>
         </main> <!-- end s-content -->
 
 
