--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
                     <ul>
        <li><a href="index.html"><i>Croa</i>ssant.</a></li>
                         <li><a href="about.html" >About</a></li>
+                           <li><a href="services.html" >Services</a></li>
                         <li><a href="work.html">Works</a></li>
                                                 <li><a href="testimonials.html" >Testimonials</a></li>
 
@@ -81,11 +82,15 @@
                         <h2 class="text-pretitle">
             Brian F., 
                         </h2>
-
+ <h1 class="text-huge-title">
+                 <img src="461301273_1238729990728334_2598305825274786136_n.jpg" style="border-radius: 90%;"><br>
+We’d love to hear from you...</h1>
+                        <h3 style="color:lightgrey;"> – and hope you’ll be saying, <i>'Garçon, more croissants, s'il vous plaît!'</a>
+                        </h1>
+                   
                         <p class="h1">
-                         <img src="461301273_1238729990728334_2598305825274786136_n.jpg" style="border-radius: 90%;"><br><br>
-We’d love to hear from you...
-                        </p>  – and hope you’ll be saying, <i>'Garçon, more croissants, s'il vous plaît!'</i> <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: ;"><a href="about.html"></a></blockquote>
+                         
+                        </p> </i> <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: ;"><a href="about.html"></a></blockquote>
 <span style="color:grey;"><i></i></span>   </a>
                         </h1>
                     </div>
