--- a/name.html
+++ b/name.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Croa</i>ssant.</title>
+    <title><i>Croa</i>ssant.</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -63,9 +63,8 @@
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-               <li><a href="index.html"><i>Croa</i>ssant.</a></li>
+                  <li><a href="index.html"><i>Croa</i>ssant.</a></li>
                         <li><a href="about.html" >About</a></li>
-                           <li><a href="services.html" >Services</a></li>
                         <li><a href="work.html">Works</a></li>
                                                 <li><a href="testimonials.html" >Testimonials</a></li>
 
@@ -90,52 +89,16 @@
 
                     <div class="column">
                     
+                   <h1 class="text-huge-title"><sup>*</sup><span style="color:">[<u>C</u></span>r<span style="color:white"><u>o<span style="color:">a</span></span><sup>2</sup></span><i>ss-ant</i><sup>1</sup></u>
+                            <br>
+                        </h1>
+<p style="color: darkgrey;" animate> *A playful nod to les rosbifs calling us frogs—so we croak in English while enjoying our favorite pastry: croissant.
 
-                        <h1 class="text-huge-title">
-                             Our work is to make France work for <i>you.</i>
-                        </h1>
-  
-  
-</table>
-<table> <h1 class="text-huge-title">
-                a) </i>
-                        </h1>
-  <thead>
-    <tr>
-      <th>P-43848, <a href="https://www.alechuggins.com"> Alec Huggins. </a></th>
-      <th>Paris</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Sourcing a film-featured painting for an American filmmaker in Paris. <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">→</a></td><br> <video src="https://github.com/bruvberg/test/raw/refs/heads/main/alec.mp4"  width="100%" autoplay muted loop controls ></video>
-      <td>Paris</td>
-    </tr>
-  </tbody>
-  
-</table>   <h1 class="text-huge-title">
-                b) </i>
-                        </h1><table>
-  <thead>
-    <tr>
-      <th>P-4398, Martin Bayerle.</th>
-      <th>Paris</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><blockquote>We are researching international gold transactions/commerce in the early 20th century. Almost all gold accounts in France at that time were held by the BoF.</blockquote> Ahoy, Captain! And, yes, we're in Paris. <a href="https://www.instagram.com/p/C1pmkfLuZoS/?img_index=1">→</a></td><br><img src="416611285_1389270048352517_7189782427710066349_n-1.jpg"  style="border-radius: 90%;" width="100%" autoplay muted loop controls >
-      <img src="yes.png"  style="border-radius: 90%; margin-top: -30%;" width="100%" autoplay muted loop controls >
+1 In French, verbs ending in -ant show an ongoing action, just like -ing in English.
 
-      <td></td>
-    </tr>
-  </tbody>
-  
-</table>
-   <h1 class="text-huge-title">
-                c)roassant</a> </i><br>.<br>.<br><a href="testimonials.html">t)estimonials. </a>
-                        </h1>
-                        </h1>
+2 And while our fellow French might correct us, saying, 'It’s coassant for a frog croaking in French, not croassant,' that’s exactly the point—we mix English and French like no one else, just like we do with our services, always ready to help you if French gives you a frog in your throat.</p>
+                             <h4 class="text-huge-title " style="margin-left: 8; font-size: 30px; opacity: 0.3;"><a href="about.html">Our name.</a>
+
         </main> <!-- end s-content -->
 
 
