--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <ul>
                         <li><a href="index.html"><i>Croa</i>ssant.</a></li>
                         <li><a href="about.html" >About</a></li>
+                           <li><a href="services.html" >Services</a></li>
                         <li><a href="work.html">Works</a></li>
                                                 <li><a href="testimonials.html" >Testimonials</a></li>
 
@@ -94,6 +95,10 @@
 
                     <ul class="intro-social">
                         <li><a href="https://www.instagram.com/croaaassant/" style="color:grey;">Instagram</a></li>
+
+
+
+
                     </ul>
 
                 </div> <!-- end intro content -->
