--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                     <ul>
                   <li><a href="index.html"><i>Croa</i>ssant.</a></li>
                         <li><a href="about.html" >About</a></li>
-                           <li><a href="about.html" >Services</a></li>
+                           <li><a href="services.html" >Services</a></li>
                         <li><a href="work.html">Works</a></li>
                                                 <li><a href="testimonials.html" >Testimonials</a></li>
 
