--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 <script defer src="https://cloud.umami.is/script.js" data-website-id="5e96907e-5f87-42b5-868f-10e2db48b550"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Z9E59QZYZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6Z9E59QZYZ');
+</script>
+
+    
 </head>
 
 <body id="top">
