--- a/name.html
+++ b/name.html
@@ -24,7 +24,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6Z9E59QZYZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6Z9E59QZYZ');
+</script>
 </head>
 
 <body id="top">
