--- a/work.html
+++ b/work.html
@@ -1,172 +1,54 @@
 <!DOCTYPE html>
-<html class="no-js ss-preload" lang="en">
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>Tufte CSS</title>
+    <link rel="stylesheet" href="tufte.css"/> <style type="text/css">
+.fluid ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 0.25rem;width: 80%;}
+.overlapping h1 { margin-bottom: 1.2rem; }
+.overlapping ul { display: grid; grid-template-columns: 4fr 2fr 2fr 3fr 6fr; max-width: 600px; }
+.overlapping li:nth-child(1) { grid-row-start: 1; grid-row-end: span 2; grid-column-start: 1; grid-column-end: span 2; z-index: 2; }
+.overlapping li:nth-child(2) { grid-row-start: 2; grid-row-end: span 4; grid-column-start: 2; grid-column-end: span 3; }
+.overlapping li:nth-child(3) { grid-row-start: 4; grid-row-end: span 3; grid-column-start: 4; grid-column-end: span 2; z-index: 2; }
+  .fluid img {
+  width: 100%; }
 
-    <!--- basic page needs
-    ================================================== -->
-    <meta charset="utf-8">
-    <title>Croa</i>ssant.</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <!-- mobile specific metas
-    ================================================== -->
+ul {
+  list-style: none;
+  margin: 0 0 0 2rem;
+  padding: 2.2rem;
+  background: #f6f3ea;
+  box-shadow: 3px 2px 12px rgba(0, 0, 0, 0.4); }
+</style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 
-    <!-- CSS
-    ================================================== -->
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
+  <body>
+    <article>
+      <p class="subtitle">Where is Brian?</p>      <h1 id="tufte-css">Most likely in the kitchen to put France on the menu.</h1>
 
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6Z9E59QZYZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+      <section>
+            <p><code>It’s impolite to talk too much about oneself — so excuse the French arrogance.
 
-  gtag('config', 'G-6Z9E59QZYZ');
-</script>
-</head>
-
-<body id="top">
+But to give you an idea of what I do: my work as a translator quickly became more than just words. I began acting as a bridge, helping clients connect with French <i>savoir-faire </i>and <i>savoir-vivre.</i></code>
+<br><br> ---<br>
+<br>Living near Paris led me into unique, sometimes unexpected projects. I was asked to help trace missing gold at the Banque de France, tied to the RMS Republic treasure, working directly with Captain Martin Bayerle. <br> <br>🏴‍☠️<img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.29350-15/416611285_1389270048352517_7189782427710066349_n.jpg?stp=dst-jpg_e35_s720x720_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjExODd4MTE0My5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UifQ&_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QEUo-D2w7VmWRDJyv_gikT-1EznHqJvstrjrfVuOnWXPqjDuCTbO07AXbd7ImRnTzY&_nc_ohc=HOCqGPx7DnMQ7kNvwHVo7nw&_nc_gid=K9mQcQBGsN5P9KR36e8NjA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzI3MjMxNjIzMjE2MTQ3ODcwOQ%3D%3D.3-ccb7-5&oh=00_AfRDUBemqFgMR5kLgwhoOx7xjIpfl7vag5I0F0yhv7p4lg&oe=686ED7B9&_nc_sid=7a9f4b" style="padding: 30px;"> Soon after, I was deep in the archives of the Bibliothèque Richelieu, assisting a New York researcher searching for forgotten French texts. Then came the arts. A filmmaker needed a painter in Paris — I found the perfect one. 
+     <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">📽️</a></td><br> <video src="https://github.com/bruvberg/test/raw/refs/heads/main/alec.mp4"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
+Around that time, I just wanted a Hugh Grant haircut from <i>Love Actually</i>. But life had other plans: I became a different kind of Hugh — the personal agent of a Playmate model during Paris Fashion Week.   <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">📽️</a></td><br> <video src="-3426824653944414274.mov"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
+<br>
+In between, I’ve managed private homes, supported legal matters for foreign clients, and acted as a discreet liaison. One case involved assisting a man from Ottawa who believed he was facing language discrimination — I helped him defend his right to speak French.
+<br>
+Each assignment is different — translation, research, cultural scouting, personal support — but the goal is always the same: to bring you more of France.
 
 
-    <!-- # preloader
-    ================================================== -->
-    <div id="preloader">
-        <div id="loader">
-        </div>
-    </div>
 
-
-    <!-- # page wrap
-    ================================================== -->
-    <div class="s-pagewrap">
-
-        <div class="circles">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-
-
-        <!-- ## site header 
-        ================================================== -->
-        <header class="s-header">
-
-            <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html"><i>Croa</i>ssant.</a></span>
-                <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
-            </div>
-
-            <div class="row wide main-nav-wrap">
-                <nav class="column lg-12 main-nav">
-                    <ul>
-               <li><a href="index.html"><i>Croa</i>ssant.</a></li>
-                        <li><a href="about.html" >About</a></li>
-                           <li><a href="services.html" >Services</a></li>
-                        <li><a href="work.html">Works</a></li>
-                                                <li><a href="testimonials.html" >Testimonials</a></li>
-
-                        <li><a href="contact.html">Say Bonjour</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-        </header> <!-- end s-header -->
-
-
-        <!-- ## main content
-        ==================================================- -->
-        <main class="s-content">
-
-
-            <!-- ### intro
-            ================================================== -->
-            <section id="intro" class="s-intro target-section">
-
-                <div class="row intro-content wide">
-
-                    <div class="column">
-                    
-
-                        <h1 class="text-huge-title">
-                             Our work is to make France work for <i>you.</i>
-                        </h1>
-  
-  
-</table>
-<table> <h1 class="text-huge-title">
-                a) </i>
-                        </h1>
-  <thead>
-    <tr>
-      <th>P-43848, <a href="https://www.alechuggins.com"> Alec Huggins. </a></th>
-      <th>Paris</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Sourcing a film-featured painting for an American filmmaker in Paris. <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">→</a></td><br> <video src="https://github.com/bruvberg/test/raw/refs/heads/main/alec.mp4"  width="100%" autoplay muted loop controls ></video>
-      <td>Paris</td>
-    </tr>
-  </tbody>
-  
-</table>   <h1 class="text-huge-title">
-                b) </i>
-                        </h1><table>
-  <thead>
-    <tr>
-      <th>P-4398, Martin Bayerle.</th>
-      <th>Paris</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><blockquote>We are researching international gold transactions/commerce in the early 20th century. Almost all gold accounts in France at that time were held by the BoF.</blockquote> Ahoy, Captain! And, yes, we're in Paris. <a href="https://www.instagram.com/p/C1pmkfLuZoS/?img_index=1">→</a></td><br><img src="416611285_1389270048352517_7189782427710066349_n-1.jpg"  style="border-radius: 90%;" width="100%" autoplay muted loop controls >
-      <img src="yes.png"  style="border-radius: 90%; margin-top: -30%;" width="100%" autoplay muted loop controls >
-
-      <td></td>
-    </tr>
-  </tbody>
-  
-</table>
-   <h1 class="text-huge-title">
-                c)roassant</a> </i><br>.<br>.<br><a href="testimonials.html">t)estimonials. </a>
-                        </h1>
-                        </h1>
-        </main> <!-- end s-content -->
-
-
-        <!-- ## footer
-        ================================================== -->
-        <footer class="s-footer">
-
-            <div class="row">
-                <div class="column ss-copyright">
-                    <span>© Copyright Croassant 2025</span> 
-                    <span>Maintained by <a href="https://www.instagram.com/croaaassant/">Brian F.</a> </span>
-                </div>
-
-            </div>
-
-        </footer> <!-- end s-footer -->
-
-    </div> <!-- end -s-pagewrap -->
-
-
-    <!-- Java Script
-    ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-
-</body>
+                        </span></span></span></p>
+        <h2 id="epilogue">What's your French story? <a href="contact.html">📬 </h2></section>
+      </footer>
+    </article>
+  </body>
 </html>
