--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p class="subtitle">Brian,</p>      <h1 id="tufte-css">... possibly the <i>most</i> English-friendly Frenchman. 🤵‍♂️</h1>
 
       <section><img src="https://croassant.fr/461301273_1238729990728334_2598305825274786136_n.jpg" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
-            <p>Bonjour,  my name is Brian, <i>ça va ?</i> I humbly aspire to be France's butler as I don’t just translate words but needs into action. Read more about <a href="work.html"> my stories,</a> say <a href="mailto:brian.fno@proton.me"> <i>bonjour</i></a>, or find me behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>, walking a marathon handling housekeeping like a wannabe Nestor. <br><br><a href="work.html">where is brian?</a><br><a href="mailto:brian.fno@proton.me">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
+            <p>Bonjour,  my name is Brian, <i>ça va ?</i> I humbly aspire to be France's butler as I don’t just translate words but needs into action. Read more about <a href="work.html"> my stories,</a> say <a href="mailto:brian.fno@proton.me"> <i>bonjour</i></a>, or find me behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>, walking a marathon handling housekeeping like a wannabe Nestor. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
       <section>
 <p><blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
