--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 
       <section>
-            <p>If French ever gives you a frog in your throat, I’ll croak it away! Whether you live in France, are just visiting, or dreaming about it from far away, feel free to reach out. If you have questions, need help, or just want to share your story, I’m here. Think of me as France’s butler—ready to help, guide, or listen. Nothing is too small or strange. And if you’re creating your own story in France, I’d be happy to help you shape it. <br><br><img src="https://static.wikia.nocookie.net/tintinfr/images/c/c4/Nestor2.gif/revision/latest?cb=20181007202253&path-prefix=fr" style="width:100px">
+            <p>If French ever gives you a frog in your throat, I’ll croak it away! Whether you live in France, are just visiting, or dreaming about it from far away, feel free to reach out. If you have questions, need help, or just want to share your story, I’m here. Think of me as France’s butler—ready to help, guide, or listen. Nothing is too small or strange. And if you’re creating your own story in France, I’d be happy to help you shape it. <br><br><img src="Nestor2.webp" style="width:100px">
 <br></section><p>----<br>
 
 <br>mail: brian.fno@proton.me<br>
