--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <article>
       <p class="subtitle">Brian,</p>      <h1 id="tufte-css">... possibly the <i>most</i> English-friendly Frenchman. 🤵‍♂️</h1>
 
-      <section><img src="https://croassant.fr/461301273_1238729990728334_2598305825274786136_n.jpg" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
+      <section><img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.2885-19/461301273_1238729990728334_2598305825274786136_n.jpg?_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=102&_nc_oc=Q6cZ2QFOrw7JUvtFDrxwLUPXvl5VGh5ceYcJFGWuQnXR6kI43pTQ-QE7sj6Nh-HSde950mY&_nc_ohc=d7Mpm0SjnLUQ7kNvwFVStTM&_nc_gid=3pRNguVYCHaSHv58hun4Rg&edm=AP4sbd4BAAAA&ccb=7-5&oh=00_AfTz1mlSxkH7_z2A1jdZ0_zR68z6bdVBJ8OqpW3_aJcQ-A&oe=686EE0BB&_nc_sid=7a9f4b" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
             <p>Bonjour,  my name is Brian, <i>ça va ?</i> I humbly aspire to be France's butler as I don’t just translate words but needs into action. Read more about <a href="work.html"> my stories,</a> say <a href="mailto:brian.fno@proton.me"> <i>bonjour</i></a>, or find me behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>, walking a marathon handling housekeeping like a wannabe Nestor. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
       <section>
