--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,55 @@
 
 
       <section>
-            <p>If French ever gives you a frog in your throat, I’ll croak it away! Whether you live in France, are just visiting, or dreaming about it from far away, feel free to reach out. If you have questions, need help, or just want to share your story, I’m here. Think of me as France’s butler—ready to help, guide, or listen. Nothing is too small or strange. And if you’re creating your own story in France, I’d be happy to help you shape it. <br><br><img src="Nestor2.webp" style="width:100px">
+            <p>If French ever leaves a frog in your throat, I’ll croak it away. As the saying goes, every man has two countries—his own, and France. Think of me as your discreet liaison and personal concierge in this second home.
+
+<br><br>I take real pleasure in helping—so never hesitate to reach out.
+Whether you need support, clarity, or just a steady hand behind the scenes, I’ll be there. 
+From <i>savoir-faire</i> to <i>savoir-vivre</i>, I’m here to make France feel less foreign, and more like home. <br><br><img src="Nestor2.webp" style="width:100px">
 <br></section><p>----<br>
 
 <br>mail: brian.fno@proton.me<br>
           insta: @brian.fno<br><span style="color: lightgrey;"><s>Love</s> letters can be sent to the following address:<br><br>
 <b style="color: grey;">Les Hauts de Loire,<br>
 79 rue Gilbert Navard,<br>
-41150 Veuzain, France</p>
+41150 Veuzain, France</b><p>💌<blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
+  <p style="color:white; font-style:italic; margin-bottom:1em;">
+  While filming in Paris, I needed a very specific art piece. Brian connected me with a painter represented by La Galerie Cécile Dufay. Everything was handled seamlessly, and the result exceeded expectations.  
+  <cite style="font-style:normal; margin-left:0.5em;">
+    <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1" style="color:darkorange; text-decoration:none;">— Alec Huggins 🎬</a>
+  </cite>
+</p>
+
+<p style="color:grey; font-style:italic; margin-bottom:1em;">
+  Brian has long been my go-to professional for complex bilingual projects across diverse sectors. His command of both language and culture is second to none — a true strategic partner.  
+  <cite style="font-style:normal; margin-left:0.5em; color:grey;">
+    — Jon Sanger, Director of <a href="https://linguistica-international.com" style="color:darkorange; text-decoration:none;">Linguistica UK</a>
+  </cite>
+</p>
+
+<p style="color:white; font-style:italic; margin-bottom:1em;">
+  I needed rare Italian fabrics for a bespoke suit — silk, wool, linen. Brian sourced the finest materials from Paris with care and precision.  
+  <cite style="font-style:normal; margin-left:0.5em; color:white;">— An American from L.A.</cite>
+</p>
+
+<p style="color:grey; font-style:italic; margin-bottom:1em;">
+  The most conscientious bilingual assistant I’ve worked with. No service has matched Brian’s accuracy, dedication, or discretion. His help has been essential in removing friction from the legal process. For Canadians needing bilingual support, he’s invaluable.  
+  <cite style="font-style:normal; margin-left:0.5em; color:grey;">
+    — <a href="https://ici.radio-canada.ca/nouvelle/2027268/droit-linguistique-gatineau-raymond-carby-samuels" style="color:darkorange; text-decoration:none;">A Canadian defending linguistic rights</a>
+  </cite>
+</p>
+
+<p style="color:white; font-style:italic; margin-bottom:1em;">
+  From property coordination to handling sensitive communication, Brian’s professionalism and efficiency have been a constant. Discretion is his craft.  
+  <cite style="font-style:normal; margin-left:0.5em; color:white;">— A Russian in Marseille</cite>
+</p>
+
+<p style="color:grey; font-style:italic; margin-bottom:1em;">
+  For English-language legal matters, Brian has been a steady hand — meticulous, professional, and reliable even under pressure. Always a pleasure to work with.   <cite style="font-style:normal; margin-left:0.5em; color:grey;">— <a href="https://mpdlaw.com" style="color:darkorange; text-decoration:none;">MDP Law</a></cite>  
+</p>
+
+<br><i>Votre humble serviteur,</i></p>
+<hr><footer><a href="index.html"> Brian F. </footer>
                         </span></span></span></p>
     </article>
   </body>
