--- a/work.html
+++ b/work.html
@@ -29,25 +29,16 @@ ul {
 
   <body>
     <article>
-      <p class="subtitle">Where is Brian?</p>      <h1 id="tufte-css">Most likely in the kitchen to put France on the menu.</h1>
+      <p class="subtitle">Where is Brian?</p>      <h1 id="tufte-css">Most likely in the kitchen, putting France on the menu.</h1>
 
       <section>
-            <p><code>It’s impolite to talk too much about oneself — so excuse the French arrogance.
-
-But to give you an idea of what I do: my work as a translator quickly became more than just words. I began acting as a bridge, helping clients connect with French <i>savoir-faire </i>and <i>savoir-vivre.</i></code>
+            <p><code>Speaking at length about oneself is improper, but a brief word may be allowed. What began as simple translation soon became much more: a discreet role of liaison. Like a trusted concierge or butler, the work evolved into quietly guiding clients—helping them navigate French <i> savoir-faire </i>and <i>savoir-vivre</i>.</i></code>
 <br><br> ---<br>
-<br>Living near Paris led me into unique, sometimes unexpected projects. I was asked to help trace missing gold at the Banque de France, tied to the RMS Republic treasure, working directly with Captain Martin Bayerle. <br> <br>🏴‍☠️<img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.29350-15/416611285_1389270048352517_7189782427710066349_n.jpg?stp=dst-jpg_e35_s720x720_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjExODd4MTE0My5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UifQ&_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QEUo-D2w7VmWRDJyv_gikT-1EznHqJvstrjrfVuOnWXPqjDuCTbO07AXbd7ImRnTzY&_nc_ohc=HOCqGPx7DnMQ7kNvwHVo7nw&_nc_gid=K9mQcQBGsN5P9KR36e8NjA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzI3MjMxNjIzMjE2MTQ3ODcwOQ%3D%3D.3-ccb7-5&oh=00_AfRDUBemqFgMR5kLgwhoOx7xjIpfl7vag5I0F0yhv7p4lg&oe=686ED7B9&_nc_sid=7a9f4b" style="padding: 30px;"> Soon after, I was deep in the archives of the Bibliothèque Richelieu, assisting a New York researcher searching for forgotten French texts. Then came the arts. A filmmaker needed a painter in Paris — I found the perfect one. 
-     <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">📽️</a></td><br> <video src="https://github.com/bruvberg/test/raw/refs/heads/main/alec.mp4"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
-Around that time, I just wanted a Hugh Grant haircut from <i>Love Actually</i>. But life had other plans: I became a different kind of Hugh — the personal agent of a Playmate model during Paris Fashion Week.   <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">📽️</a></td><br> <video src="-3426824653944414274.mov"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
+<br><i>Oui,</i> living just outside Paris brings its share of unexpected tasks. On one occasion, it involved aiding a search for missing gold at the Banque de France, linked to the legendary RMS Republic treasure—alongside Captain Martin Bayerle himself.<img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.29350-15/416611285_1389270048352517_7189782427710066349_n.jpg?stp=dst-jpg_e35_s720x720_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjExODd4MTE0My5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UifQ&_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QEUo-D2w7VmWRDJyv_gikT-1EznHqJvstrjrfVuOnWXPqjDuCTbO07AXbd7ImRnTzY&_nc_ohc=HOCqGPx7DnMQ7kNvwHVo7nw&_nc_gid=K9mQcQBGsN5P9KR36e8NjA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzI3MjMxNjIzMjE2MTQ3ODcwOQ%3D%3D.3-ccb7-5&oh=00_AfRDUBemqFgMR5kLgwhoOx7xjIpfl7vag5I0F0yhv7p4lg&oe=686ED7B9&_nc_sid=7a9f4b" style="padding: 30px;">At another time, when a filmmaker needed the perfect painter in Paris, the right artist was found.     <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">📽️</a></td><br> <video src="https://github.com/bruvberg/test/raw/refs/heads/main/alec.mp4"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
+As for personal style? The original plan was simply to get a <i>Love Actually</i> haircut, à la Hugh Grant. But life had other ideas: acting as <s>Hefner</s> personal agent for a <a href="https://www.instagram.com/p/DAxaReCIHBd/">playmate</a> model during Paris Fashion Week. <video src="-3426824653944414274.mov"  width="100%" autoplay muted loop controls style="padding:30px" ></video>
 <br>
-In between, I’ve managed private homes, supported legal matters for foreign clients, and acted as a discreet liaison. One case involved assisting a man from Ottawa who believed he was facing language discrimination — I helped him defend his right to speak French.
-<br>
-Each assignment is different — translation, research, cultural scouting, personal support — but the goal is always the same: to bring you more of France.
-
-
-
-                        </span></span></span></p>
-        <h2 id="epilogue">What's your French story? <a href="contact.html">📬 </h2></section>
+                        </span></span></span></p><br><hr>
+        <h3 id="epilogue"> So, what chapter of France will you write next? Say <a href="contact.html">Garçon</a>, and let’s begin.
       </footer>
     </article>
   </body>
