--- a/index.html
+++ b/index.html
@@ -11,24 +11,11 @@
     <article>
       <p class="subtitle">Brian,</p>      <h1 id="tufte-css">... possibly the <i>most</i> English-friendly Frenchman. 🤵‍♂️</h1>
 
-      <section><img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.2885-19/461301273_1238729990728334_2598305825274786136_n.jpg?_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=102&_nc_oc=Q6cZ2QFOrw7JUvtFDrxwLUPXvl5VGh5ceYcJFGWuQnXR6kI43pTQ-QE7sj6Nh-HSde950mY&_nc_ohc=d7Mpm0SjnLUQ7kNvwFVStTM&_nc_gid=3pRNguVYCHaSHv58hun4Rg&edm=AP4sbd4BAAAA&ccb=7-5&oh=00_AfTz1mlSxkH7_z2A1jdZ0_zR68z6bdVBJ8OqpW3_aJcQ-A&oe=686EE0BB&_nc_sid=7a9f4b" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
-            <p>Bonjour,  my name is Brian, <i>ça va ?</i> I humbly aspire to be France's butler as I don’t just translate words but needs into action. Read more about <a href="work.html"> my stories,</a> say <a href="mailto:brian.fno@proton.me"> <i>bonjour</i></a>, or find me behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>, walking a marathon handling housekeeping like a wannabe Nestor. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
+      <section><img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.2885-19/461301273_1238729990728334_2598305825274786136_n.jpg?_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=102&_nc_oc=Q6cZ2QG-S2tyNsLsHqdWbBe45E3WDX_Yy_JrHkZjWufJWb6YWMZOs3KR5PseOaIDxQozNe8&_nc_ohc=4NRUNF1xbR4Q7kNvwGy-2XO&_nc_gid=RKIpiUNzvDOo22is5x1BsQ&edm=APoiHPcBAAAA&ccb=7-5&oh=00_AfQKerRw2EOMKAaNFJj3qq1lhnp9x8w3bKm0EKTiSvH0Uw&oe=6876917B&_nc_sid=22de04" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
+            <p><i>Bonjour,</i>  how d'ye do? I humbly aspire to be France's butler as I don’t just translate words but needs into <a href="work.html">action</a>. Say <a href="contact.html"> <i>bonjour</i></a>, or find me housekeeping behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
       <section>
-<p><blockquote cite="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000hB">
-       <p><i><span style="color:white;">
-I was shooting a film in Paris and needed a specific art piece. Brian was able to connect me with a Paris-based painter featured in La Galerie Cécile Dufay and complete my request. Everything went smoothly, and we were delighted with the final product. <a href="https://www.instagram.com/p/DAqObyqOZrm/?img_index=1">🎬</a>
-</span></i> <i><span style="color:grey;">
-Brian has consistently been my go-to professional for intricate bilingual projects across various industries. His insight into both languages and cultures is unparalleled, making him a trusted advisor. - Jon Sanger, Director of Linguistica UK.
-</span></i> <i><span style="color:white;">
-I needed rare Italian wool, silk, and linen for a bespoke suit, and Brian showed the utmost diligence in sourcing the finest materials from Paris. - An American from L.A.
-</span></i><i><span style="color:grey;">
-Brian is the most conscientious bilingual assistant you'll ever find. His accuracy is unmatched by any service I have ever used. He truly prides himself on serving his clients and taking the stress out of the litigation process. His fluency in both English and French is a great advantage for those of us in Canada who often need bilingual support. - <a href="https://ici.radio-canada.ca/nouvelle/2027268/droit-linguistique-gatineau-raymond-carby-samuels">A canadian fighting for his linguistic rights.</a>
-</span></i><i><span style="color:white;">
-I’ve been working with Brian for some time, managing both personal and professional tasks. From handling property matters to coordinating research and communications, his efficiency and professionalism have been outstanding.
-</span>- A Russian in Marseille.</i><i><span style="color:grey;">
-Brian has been an invaluable resource for handling English-language legal matters. His accuracy and professionalism are steadfast, even with complex or urgent tasks. Working with him is always a pleasure, and his professionalism remains unwavering.
-</span></i></p>
+
 
         </blockquote>
 
