--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <article>
       <p class="subtitle">Brian,</p>      <h1 id="tufte-css">... possibly the <i>most</i> English-friendly Frenchman. 🤵‍♂️</h1>
 
-      <section><img src="https://scontent-cdg4-1.cdninstagram.com/v/t51.2885-19/461301273_1238729990728334_2598305825274786136_n.jpg?_nc_ht=scontent-cdg4-1.cdninstagram.com&_nc_cat=102&_nc_oc=Q6cZ2QG-S2tyNsLsHqdWbBe45E3WDX_Yy_JrHkZjWufJWb6YWMZOs3KR5PseOaIDxQozNe8&_nc_ohc=4NRUNF1xbR4Q7kNvwGy-2XO&_nc_gid=RKIpiUNzvDOo22is5x1BsQ&edm=APoiHPcBAAAA&ccb=7-5&oh=00_AfQKerRw2EOMKAaNFJj3qq1lhnp9x8w3bKm0EKTiSvH0Uw&oe=6876917B&_nc_sid=22de04" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
+      <section><img src="https://croassant.neocities.org/461301273_1238729990728334_2598305825274786136_n.jpg" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
             <p><i>Bonjour,</i>  how d'ye do? I humbly aspire to be France's butler as I don’t just translate words but needs into <a href="work.html">action</a>. Say <a href="contact.html"> <i>bonjour</i></a>, or find me housekeeping behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
       <section>
