--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,10 @@
 
 
       <section>
-            <p>If French ever leaves a frog in your throat, I’ll croak it away. As the saying goes, every man has two countries—his own, and France. Think of me as your discreet liaison and personal concierge in this second home.
-
-<br><br>I take real pleasure in helping—so never hesitate to reach out.
+            <p>If French ever leaves a frog in your throat, I’ll croak it away as I take real pleasure in helping—so never hesitate to reach out.
 Whether you need support, clarity, or just a steady hand behind the scenes, I’ll be there. 
-From <i>savoir-faire</i> to <i>savoir-vivre</i>, I’m here to make France feel less foreign, and more like home. <br><br><img src="Nestor2.webp" style="width:100px">
-<br></section><p>----<br>
+<br>
+
 
 <br>mail: brian.fno@proton.me<br>
           insta: @brian.fno<br><span style="color: lightgrey;"><s>Love</s> letters can be sent to the following address:<br><br>
@@ -34,8 +32,7 @@ From <i>savoir-faire</i> to <i>savoir-vivre</i>, I’m here to make France feel 
 
 <p style="color:grey; font-style:italic; margin-bottom:1em;">
   Brian has long been my go-to professional for complex bilingual projects across diverse sectors. His command of both language and culture is second to none — a true strategic partner.  
-  <cite style="font-style:normal; margin-left:0.5em; color:grey;">
-    — Jon Sanger, Director of <a href="https://linguistica-international.com" style="color:darkorange; text-decoration:none;">Linguistica UK</a>
+  <cite style="font-style:normal; margin-left:0.5em; color:grey;"> — Jon Sanger, Director of <a href="https://linguistica-international.com" style="color:darkorange; text-decoration:none;">Linguistica UK</a>
   </cite>
 </p>
 
