--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 
   <body>
     <article>
-      <p class="subtitle">Brian,</p>      <h1 id="tufte-css">... possibly the <i>most</i> English-friendly Frenchman. 🤵‍♂️</h1>
+      <p >
+           <h1 id="tufte-css" style="color: ;"><span style="color:grey;"> Brian FINO,</span><br>Anglo-French <u><b>Facilitator</b>.</u> </s></h1></h1>
+<br><img src="https://croassant.neocities.org/461301273_1238729990728334_2598305825274786136_n.jpg" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="width: 150px; padding-left:5px; border-radius: 70px;">
+      <section><p>
 
-      <section><img src="https://croassant.neocities.org/461301273_1238729990728334_2598305825274786136_n.jpg" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="border-radius: 90%; width: 150px;">
-            <p><i>Bonjour,</i>  how d'ye do? I humbly aspire to be France's butler as I don’t just translate words but needs into <a href="work.html">action</a>. Say <a href="contact.html"> <i>bonjour</i></a>, or find me housekeeping behind the scenes at <a href="https://www.hautsdeloire.com"> Hauts de Loire</a>. <br><br><a href="work.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
+I'm your linguist assistant in all aspects of your life in France.
+<br><br>
+<a href="brianwho.html">who I am?</a><br><a href="wheresbrian.html">where is brian?</a><br><a href="contact.html">contact</a><br><a href="https://www.instagram.com/brian.fno/">insta</a><br></p>
 
       <section>
-
 
         </blockquote>
 
