--- a/wheresbrian.html
+++ b/wheresbrian.html
@@ -10,7 +10,7 @@
   <body>
     <article>
       <p >
-           <h1 id="tufte-css" style="color: ;"><span style="color:grey;"><i>Where is Brian?</i></span></u> </s></h1></h1>
+           <h1 id="tufte-css" style="color: ;"><span style="color:grey;"><i>Putting France on the menu.</i></span></u> </s></h1></h1>
 <br><img src="bond.png" alt="Exports and Imports to and from Denmark & Norway from 1700 to 1780" / style="width: 150px; padding-left:px; border-radius: 0px;">
       <section><p>  </p>
 <p>
