--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Tufte CSS</title>
+    <title>Brian F., France's butler</title>
     <link rel="stylesheet" href="tufte.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
